[workspace]
resolver = "2"

members = [
    # Core libraries
    "crates/tetra-core",
    "crates/tetra-saps",
    "crates/tetra-config",
    "crates/tetra-pdus",
    "crates/tetra-entities",
    
    # Binaries
    "bins/bluestation-bs",
    #"bins/bluestation-telemetry",
    #"bins/bluestation-control",
    #"bins/pdu-tool",
]

# Clippy lint policy for the whole workspace.
#
# These are pre-existing *style / complexity / pedantic* lints that this codebase has
# chosen not to enforce. They carry no correctness impact, and many of clippy's suggested
# rewrites are marked `MaybeIncorrect` (e.g. removing a `return;` from a divergent
# `let ... else { … }` block does not compile), so applying them en masse to protocol-
# critical PHY/MAC/CMCE code would risk regressions for zero functional gain.
#
# Allowing them centrally keeps `cargo clippy` clean and actionable: any *correctness*,
# *suspicious*, or *perf-bug* lint (which are NOT listed here) will still surface as a
# warning. Revisit individual entries if/when the relevant code is rewritten anyway.
[workspace.lints.clippy]
assertions_on_constants = "allow"
blocks_in_conditions = "allow"
bool_assert_comparison = "allow"
bool_comparison = "allow"
clone_on_copy = "allow"
collapsible_if = "allow"
doc_lazy_continuation = "allow"
empty_line_after_doc_comments = "allow"
empty_line_after_outer_attr = "allow"
expect_fun_call = "allow"
extend_with_drain = "allow"
if_same_then_else = "allow"
items_after_test_module = "allow"
iter_overeager_cloned = "allow"
large_enum_variant = "allow"
len_zero = "allow"
let_and_return = "allow"
let_unit_value = "allow"
manual_checked_ops = "allow"
manual_clamp = "allow"
manual_div_ceil = "allow"
manual_flatten = "allow"
manual_is_multiple_of = "allow"
manual_map = "allow"
manual_memcpy = "allow"
manual_range_contains = "allow"
manual_split_once = "allow"
manual_strip = "allow"
match_like_matches_macro = "allow"
match_single_binding = "allow"
module_inception = "allow"
needless_borrow = "allow"
needless_question_mark = "allow"
needless_range_loop = "allow"
needless_return = "allow"
needless_update = "allow"
new_without_default = "allow"
nonminimal_bool = "allow"
obfuscated_if_else = "allow"
ptr_arg = "allow"
question_mark = "allow"
redundant_closure = "allow"
redundant_pattern_matching = "allow"
result_large_err = "allow"
result_unit_err = "allow"
single_match = "allow"
too_many_arguments = "allow"
unnecessary_cast = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_map_or = "allow"
unnecessary_sort_by = "allow"
unnecessary_unwrap = "allow"
unwrap_or_default = "allow"
useless_conversion = "allow"
useless_format = "allow"
while_let_loop = "allow"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Razvan Zeces / FlowStation.Dev"]
license = "MIT"

[workspace.dependencies]
# Internal crates
tetra-core = { path = "crates/tetra-core" }
tetra-config = { path = "crates/tetra-config" }
tetra-saps = { path = "crates/tetra-saps" }
tetra-pdus = { path = "crates/tetra-pdus" }
tetra-entities = { path = "crates/tetra-entities" }

# External dependencies
as-any = "0.3.2"
num = "0.4.3"
num-complex = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustfft = "6.4.0"
soapysdr = "0.5.0"
rand = "0.9.2"
clap = { version = "4.5.53", features = ["derive"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
crossbeam-channel = "0.5"
bitcode = "0.6.9"
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
ctrlc = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
